# mailgate

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaksignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  compose.production.yaml  compose.release.yaml  compose.yaml  pyproject.toml  requirements-dev.in  requirements.in
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  dependency-review.yml  release.yml  security.yml
app/: README.md  compile_translations.py  manage.py
app/gateway/: __init__.py  api.py  api_auth.py  apps.py  authentication.py  crypto.py  forms.py  ingestion.py  lifecycle.py  mail.py  models.py  owner_export.py  providers.py  selftest.py  validators.py  views.py
app/gateway/management/commands/: export_owner_data.py  purge_retention.py  rotate_mailbox_credentials.py  verify_mailbox_credentials.py
app/gateway/migrations/: 0001_initial.py  0002_auditevent_gateway_aud_actor_ffeb22_idx_and_more.py  0003_alter_apitoken_expires_at.py  0004_api_boundary_and_mailbox_version.py  0005_provider_presets_and_authentication_schema.py
app/gateway/static/gateway/: mailgate.css
app/gateway/templates/gateway/: about.html  audit.html  base.html  dashboard.html  login.html  mailbox_delete.html  mailbox_form.html  message_detail.html  message_list.html  security_test.html  setup_owner.html  tokens.html
app/gateway/templatetags/: gateway_labels.py
app/locale/de/LC_MESSAGES/: django.po
app/mailgate/: api_settings.py  api_urls.py  api_wsgi.py  asgi.py  config.py  health.py  middleware.py  settings.py  test_settings.py  urls.py  wsgi.py
deploy/: Caddyfile  Caddyfile.production  README.md
deploy/egress/: haproxy.cfg.template  render-haproxy.sh
deploy/postgres/: apply-permissions.sh  bootstrap-roles.sh
docs/: architecture.md  automation-plan.md  development.md  installation-acceptance.md  operations.md  pilot-report-template.md  pilot-runbook.md  projektplan.md  release-evidence.md  release-gates.md  security-scan-policy.md  threat-model.md  translating.md
docs/decisions/: 0001-project-license.md  0002-v1-security-boundaries.md  0003-automated-approval-and-agent-guardrails.md
docs/providers/: README.md  generic-imaps.md  hostpoint.md
scripts/: backup.py  backup_archive.py  create_local_secrets.py  doctor.py  restore.py  rotate_credential_keyring.py  rotate_postgres_admin_password.py  rotation_common.py  synthetic_imap_server.py  verify_postgres_boundaries.py
tests/: test_accessibility.py  test_authentication.py  test_backup_archive.py  test_config.py  test_dkim_resolver.py  test_doctor.py  test_fuzz.py  test_gateway.py  test_health.py  test_ingestion.py  test_lifecycle.py  test_mail_processing.py  test_rotation_tools.py  test_worker.py
tests/adversarial/: README.md
tests/e2e/: compose.e2e.yaml  test_synthetic_imap_server.py  test_v1_browser_flow.py
tests/fixtures/: README.md
worker/: README.md
worker/mailgate_dkim_resolver/: __main__.py
worker/mailgate_worker/: __main__.py
