[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mailgate"
version = "1.0.0rc1"
description = "Self-hosted email security gateway with a restricted read-only AI-agent API"
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "Alf Müller" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django :: 5.2",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "Django==6.0.7",
  "cryptography==49.0.0",
  "dkimpy==1.1.8",
  "dnspython==2.8.0",
  "gunicorn==26.0.0",
  "psycopg[binary]==3.3.4",
  "whitenoise==6.12.0",
]

[project.urls]
Homepage = "https://github.com/AlfMueller/mailgate"
Issues = "https://github.com/AlfMueller/mailgate/issues"
Repository = "https://github.com/AlfMueller/mailgate.git"

[tool.setuptools.packages.find]
where = ["app", "worker"]
include = ["mailgate*", "gateway*"]

[tool.setuptools.package-data]
gateway = ["templates/**/*.html", "static/**/*"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"app/mailgate/test_settings.py" = ["F403", "F405", "E402", "S105"]
"tests/*" = ["S106"]
